<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip">

        <EditText
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Enter player name..."
            android:maxLength="12"
            android:layout_weight=".5"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_add"
            android:textColor="#FFFFFF"
            android:layout_weight=".5"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_add"
            android:text="Add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dip">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/convergence"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="10"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="ID" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/convergence"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="30"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/name_title" />

        <TextView
            android:id="@+id/winsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/convergence"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/wins_title" />

        <TextView
            android:id="@+id/lossesTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/convergence"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/losses_title" />

        <TextView
            android:id="@+id/tiesTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/convergence"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="20"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/ties_title" />
    </LinearLayout>

    <ListView
        android:id="@+id/statsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"/>

</LinearLayout>