<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="50dp"
    android:stretchColumns="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSelectPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dip"
                android:fontFamily="@font/convergence"
                android:textAlignment="center"
                android:textColor="#32786E"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/player1_label" />

            <Spinner
                android:id="@+id/spnSelectPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dip"
                android:textAlignment="center"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblPlayer1Warning"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="10dip"
                android:fontFamily="@font/convergence"
                android:text="Test"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSelectPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dip"
                android:fontFamily="@font/convergence"
                android:text="@string/player2_label"
                android:textAlignment="center"
                android:textColor="#32786E"
                android:textSize="23sp"
                android:textStyle="bold" />


            <Spinner
                android:id="@+id/spnSelectPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="10dip"
                android:textAlignment="center"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblPlayer2Warning"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="10dip"
                android:fontFamily="@font/convergence"
                android:text="Test"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_red_dark"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:padding="10dip">

        <Button
            android:id="@+id/btnStartGame"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:padding="8dp"
            android:background="@drawable/button_shape"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:text="@string/startGameText" />
    </LinearLayout>

</TableLayout>